--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+          ssh-known-hosts: "aur.archlinux.org"
+          ssh-strict: "false"
+          ssh-key: ${{ secrets.AUR_SSH_KEY }}
 
       - name: Check polypane
         id: outdated
@@ -37,6 +40,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+          ssh-known-hosts: "aur.archlinux.org"
+          ssh-strict: "false"
+          ssh-key: ${{ secrets.AUR_SSH_KEY }}
 
       - name: Update
         # eventually extend to other packages
