--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,12 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check]
     if: needs.check.outputs.outdated == 'true'
-    container: archlinux
     steps:
-      - name: Setup deps
-        run: |
-          pacman -Syu --noconfirm --needed --overwrite='*' git sed pacman-contrib sudo openssh
-
       - name: Setup ssh
         run: |
           mkdir -p ~/.ssh
@@ -70,30 +65,16 @@ jobs:
 
       - name: Update
         # eventually extend to other packages
-        shell: bash
         env:
           CURRENT_VERSION: ${{ needs.check.outputs.current-version }}
           LATEST_VERSION: ${{ needs.check.outputs.latest-version }}
         run: |
           echo "Current: ${CURRENT_VERSION}"
           echo "Latest: ${LATEST_VERSION}"
-          useradd github -M 
-          passwd -d github
-          printf 'github ALL=(ALL) ALL\n' | tee -a /etc/sudoers 
-          git config --global --add safe.directory ${PWD}/polypane
-          chown -R github polypane
           cat polypane/PKGBUILD
           sed -i "s/pkgver=${CURRENT_VERSION}/pkgver=${LATEST_VERSION}/g" polypane/PKGBUILD
           sed -i -E "s/pkgrel=[0-9]/pkgrel=1/g" polypane/PKGBUILD
           cat polypane/PKGBUILD
-          cd polypane
-          sudo -u github bash -c 'updpkgsums'
-          sudo -u github bash -c 'makepkg --printsrcinfo > .SRCINFO'
-          cat .SRCINFO
-          sudo -u github bash -c 'makepkg -scC --noconfirm'
-          git status
-          git --no-pager diff --patch
-          rm *.AppImage *.pkg.tar.zst || true
 
       - name: Publish
         uses: KSXGitHub/github-actions-deploy-aur@v2.6.0
@@ -105,4 +86,5 @@ jobs:
           ssh_private_key: ${{ secrets.AUR_SSH_KEY }}
           commit_message: "chore(pkg): Bump to ${{ needs.check.outputs.latest-version }}"
           allow_empty_commits: false
+          updpkgsums: true
           test: true
