--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,3 +88,4 @@ jobs:
           allow_empty_commits: false
           updpkgsums: true
           test: true
+          test_flags: -s --noconfirm --clean --cleanbuild
