fix(gh): update actions to use pydantic v1
Signed-off-by: Braden Mars <bradenmars@bradenmars.me>

--- a/.github/actions/check-outdated/Dockerfile
+++ b/.github/actions/check-outdated/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.11
-RUN pip --no-cache-dir install httpx PyGithub pydantic
+RUN pip --no-cache-dir install httpx PyGithub pydantic==1.10.11
 COPY ./app /app
 CMD ["python", "/app/main.py"]
 
